--- a/first.css
+++ b/first.css
@@ -31,6 +31,7 @@ padding: .5em;
 .bigdiv{
   position: relative;
   margin-bottom: 0;
+ min-height: 100%;
 
 }
 .footer{
@@ -40,9 +41,6 @@ padding: .5em;
   vertical-align: middle;
   position:absolute;
   margin-bottom: 0;
-}
-html, body{
- margin-bottom: 0;
 }
 
 
