--- a/first.css
+++ b/first.css
@@ -30,7 +30,7 @@ padding: .5em;
 
 .bigdiv{
   position: relative;
-  
+  margin-bottom: 0;
  min-height: 100%;
 
 }
@@ -39,7 +39,7 @@ padding: .5em;
   background-color: lightgrey;
   height: 3em;
   vertical-align: middle;
-  position:absolute;
+  position:relative;
   margin-bottom: 0;
 }
 
