--- a/first.css
+++ b/first.css
@@ -1,10 +1,4 @@
-html,
-body {
-   margin:0;
-   padding:0;
-   height:100%;
-}
- .navbar li{
+.navbar li{
 display: inline;
 list-style-type: none;
 padding: .5em;
@@ -32,18 +26,19 @@ padding: .5em;
   margin-top: 2%;
   display: inline;
 }
-.bigdiv{
-   min-height:100%;
-   position: relative;
 
+.bigdiv{
+  position: relative;
+  margin-bottom: 0;
+
+}
 .footer{
   width:100%;
   background-color: lightgrey;
   height: 3em;
   vertical-align: middle;
   position:absolute;
-  bottom:0
- 
+  margin-top: 18%;
 }
 
 
@@ -77,4 +72,3 @@ ul{
   text-decoration: underline;
   color: darkgrey;
 }
-
